fix title spacing from header in single

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -212,6 +212,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .card {
+    display: inline-block;
     padding-bottom: 25px;
 
     &.discrete {
